--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,7 +8,7 @@ services:
       POSTGRES_USER: postgres
       POSTGRES_PASSWORD: banana13
       POSTGRES_DB: teste
-    env-file:
+    env_file:
       ./.env
     ports:
       - "5432:5432"
